--- a/package.json
+++ b/package.json
@@ -47,5 +47,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "http://Lucky-sausages.github.io/web"
+  "homepage": "https://Lucky-sausages.github.io/web"
 }
