--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
     "react-router": "^5.1.1",
-    "react-router-dom": "^5.1.1"
+    "react-router-dom": "^5.1.1",
+    "express": "latest"
   },
   "browserslist": {
     "production": [
